--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "500 Miles For Parkisons Education Site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/jeffrey-xiao/500-Miles-For-Parkisons-Education#readme",
   "dependencies": {
+    "body-parser": "^1.15.1",
+    "emailjs": "^1.0.4",
     "express": "^4.13.4",
     "http": "0.0.0",
     "jade": "^1.11.0",
